tests/0052-function-local-mutual-recursion.src.err
ERROR: undefined variable 'is_odd'
 |     return is_odd (n-1);
              ^
